Draft checked elastic instalation v3